crash_log.txt
Traceback (most recent call last):
  File "D:\Dev\app\STS\ShoeProject\run_app.py", line 44, in <module>
    from frontend.ui import MainWindow
  File "D:\Dev\app\STS\ShoeProject\frontend\ui.py", line 301
    except: passd(self.cust_id)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: default 'except:' must be last
